# setuptools config
# see http://setuptools.readthedocs.io/en/latest/setuptools.html#configuring-setup-using-setup-cfg-files
[metadata]
name = CTRL-Z
version = 1.2.1
description = A Django backup and recovery tool
long_description = file: README.rst
url = https://github.com/isprojects/ctrl-z
license = MIT
author = ISProjects B.V, Sergei Maertens
author_email = support@isprojects.nl
keywords = django, backup, recovery
classifiers =
    Development Status :: 5 - Production/Stable
    Framework :: Django
    Framework :: Django :: 1.11
    Framework :: Django :: 2.0
    Framework :: Django :: 2.1
    Framework :: Django :: 2.2
    Intended Audience :: Developers
    Operating System :: Unix
    Operating System :: MacOS
    Operating System :: Microsoft :: Windows
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Topic :: Software Development :: Libraries :: Python Modules

[options]
zip_safe = False
include_package_data = True
packages = find:
install_requires =
    django
    python-dateutil
    pyyaml
tests_require =
    psycopg2-binary
    pytest
    pytest-django
    pytest-freezegun
    pytest-mock
    tox
    isort

[options.extras_require]
tests =
    psycopg2-binary
    pytest
    pytest-django
    pytest-freezegun
    pytest-mock
    tox
    isort
pep8 = flake8
coverage = pytest-cov
docs =
    sphinx
    sphinx-rtd-theme
release = zest.releaser

# 3rd party configuration

[aliases]
test=pytest

[bdist_wheel]
universal = 1

[isort]
combine_as_imports = true
default_section = THIRDPARTY
include_trailing_comma = false
line_length = 79
multi_line_output = 5
skip = env,.tox,.history,.eggs
; skip_glob =
not_skip = __init__.py
known_django=django
known_first_party=ctrl_z
sections=FUTURE,STDLIB,DJANGO,THIRDPARTY,FIRSTPARTY,LOCALFOLDER

[tool:pytest]
testpaths = tests

[coverage:run]
branch = True
source = ctrl_z
omit =
    */tests/*
    *tests.py

[pep8]
max-line-length=79
exclude=env,.tox,doc

[flake8]
max-line-length=79
exclude=env,.tox,doc

[zest.releaser]
create-wheel = yes

[distutils]
index-servers = pypi
